[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/bullets/01.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 2.60415

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.972656, 0.957696, 0.0151978, 1, 1, 0.539063, 0, 1 )

[node name="bullet14" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="time_life" type="Timer" parent="."]
wait_time = 363.666

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
self_modulate = Color( 0.0823529, 0.00392157, 1, 1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( -0.0537338, 0.161201 )
amount = 70
emission_shape = 1
emission_sphere_radius = 3.0
gravity = Vector2( 0, -5 )
color_ramp = SubResource( 2 )
[connection signal="timeout" from="time_life" to="." method="_on_time_life_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
